k8s/job-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-controller
  labels:
    app: job-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-controller
  template:
    metadata:
      labels:
        app: job-controller
    spec:
      serviceAccountName: job-controller-sa
      containers:
        - name: job-controller
          image: 288761763515.dkr.ecr.eu-central-1.amazonaws.com/cs3-job-controller:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "250m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
